array.island.Island.scala.error
Compilation error:
Island:6: error: '(' expected but identifier found.
    if num(i)<num(i+1)
       ^